--- a/ubuntu/etc/nginx/nginx.conf
+++ b/ubuntu/etc/nginx/nginx.conf
@@ -1,3 +1,8 @@
+#####################################################
+# Source https://www.nginx.com/
+# Updated by cryptopool.builders for crypto use...
+#####################################################
+
 user  www-data;
 worker_processes  auto;
 
